tests/baselines/reference/decoratorOnClassMethod12.errors.txt
decoratorOnClassMethod12.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
decoratorOnClassMethod12.ts(6,11): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


==== decoratorOnClassMethod12.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class S {
            decorator(target: Object, key: string): void { }
        }
        class C extends S {
            @(super.decorator)
              ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
            method() { }
        }
    }